--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ body {
   font-size: 1.7rem;
   font-weight: 500;
   font-style: italic;
+  text-decoration: underline;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 10%;
 }
 
 .button-container {
